--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -39,7 +39,6 @@
   flex-direction: row;
   width: 100vw;
   height: 100px auto;
-  background-color: rgb(81, 160, 229);
 }
 
 .box{
@@ -51,13 +50,16 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin: 2rem;
-  width: 47vw;
+  width: 48vw;
 
 }
 
 
-
+.content-wrapper{
+  min-height: 100vh;
+  padding-top: 200px;
+  display: flex;
+}
 
 
 .bottom{
@@ -67,8 +69,8 @@
 }
 
 .line{
-  min-width: 2px;
-  height: 1000px;
+  width: 2px;
+  height: 700px;
   background-color: black;
 }
 
