--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,11 +2,10 @@
   display: flex;
   max-width: 1980px;
   width: 100vw;
-  height: 200px;
   margin: 0;
   padding: 0;
   text-align: center;
-  align-items: center;
+  overflow-y: auto;
 }
 
 /* .navBar{
@@ -29,6 +28,15 @@
 
  */
 
+.background-container {
+  background-image: url('frontend/src/assets/grayslash.svg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-blend-mode: multiply; /* Blend the image with the background color */
+}
+
+
 .total{
   margin-top: 200px;
 }
@@ -50,6 +58,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  padding-top: 15px;
   width: 48vw;
 
 }
@@ -57,7 +66,7 @@
 
 .content-wrapper{
   min-height: 100vh;
-  padding-top: 200px;
+  padding-top: 90px;
   display: flex;
 }
 
